syntax = "proto3";

package proto;

option go_package = "./";

message SimpleRequest {
  string data = 1;
}

message SimpleResponse {
  string stream_value = 1;
}


service StreamSimple {
  rpc ListValue(SimpleRequest) returns (stream SimpleResponse) {}
}